--- a/css/konfigurasi.css
+++ b/css/konfigurasi.css
@@ -89,7 +89,7 @@ body {
 }
 
 .form-control-dark {
-  color: #fff;
+  color: #7741b5;
   background-color: rgba(255, 255, 255, .1);
   border-color: rgba(255, 255, 255, .1);
 }
